--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html style="height:100%" lang="zh-tw">
+<html  lang="zh-tw">
 <head>
    <meta charset="utf-8">
    <!--<meta http-equiv="refresh" content="1;http:">-->
@@ -18,11 +18,11 @@ container{
 
 <div id="container" >
 	
-	<img style="margin:0px 0px 0px 200px"src="image/1.png" height="300">
+	<img style="padding-right:200px"src="image/1.png" height="300">
 	
-	<img style="padding-left:500px" src="image/background.png" height="800">
+	<img style="padding-left:auto" src="image/background.png" height="800">
 <!--5秒後將進入深石數位公司網頁-->
-<img style="margin:0px 0px 0px 320px" src="image/enter.png" height="50" >
+<img style="margin:0px 0px 0px 0px" src="image/enter.png" height="50" >
 </div>
 </body>
-</html
+</html>
