--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ container{
 	
 	<img style="padding-left:auto" src="image/background.png" height="800">
 <!--5秒後將進入深石數位公司網頁-->
+<a href="1.html">
 <img style="margin:0px 0px 0px 0px" src="image/enter.png" height="50" >
+</a>
 </div>
 </body>
 </html>
